Seconda parte esercizio

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,10 @@
     color: white;
 }
 .cella--selezionata{
-    background-color:brown;
+    background-color:green;
+}
+.cella--bomba{
+    background-color: brown;
 }
 
 /*********************************************************
